--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation("org.matheclipse:matheclipse-core:1.0.0-SNAPSHOT")
-
+    compile 'org.matheclipse:matheclipse-core:1.0.0-SNAPSHOT'
+    compile 'javax.measure:unit-api:2.0-PRD'
+    compile 'org.appdapter:ext.bundle.math.symja_jas:1.2.3'
+    //compile 'de.uni-mannheim.rz.krum:jas:2.6.6017'      //TODO: Which CAS system?
 }
