--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'org.matheclipse:matheclipse-core:1.0.0-SNAPSHOT'
     compile 'javax.measure:unit-api:2.0-PRD'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     //implementation 'org.appdapter:ext.bundle.math.symja_jas:1.2.3'
     //compile 'de.uni-mannheim.rz.krum:jas:2.6.6017'      //TODO: Which CAS system?
 }
