--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,27 @@
 plugins {
     id 'java'
     id 'war'
+    // Apply the application plugin to add support for building a CLI application.
+    id 'application'
+
+    // JavaFX Support in Gradle builds
+    id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
-group 'org.example'
-version '1.0-SNAPSHOT'
+group 'net.uckit'
+version '1.1'
+
+javafx {
+    version = "15"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
 
 repositories {
     mavenCentral()
     maven{
         url "https://oss.sonatype.org/content/repositories/snapshots"
     }
-
+    jcenter()
 }
 
 dependencies {
@@ -21,6 +31,40 @@ dependencies {
     compile 'javax.measure:unit-api:2.0-PRD'
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    implementation 'com.google.guava:guava:29.0-jre'
+
+    // cucumber.io dependencies
+    testImplementation "io.cucumber:cucumber-java:6.6.0"
+    testImplementation "io.cucumber:cucumber-junit:6.6.0"
+
+    // Use JUnit Jupiter API for testing.
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
+
+    // Use JUnit Jupiter Engine for testing.
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
+
+    // This is here to solve Eclipse IDE Junit 5 compatibility issues
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.6.2'
+
+    compile group: 'org.jfxtras', name: 'jfxtras-all', version: '10.0-r1'
+
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.3'
+
+    //This is for some extra widgets in JFX
+    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '8.0-r1-SNAPSHOT'
+    compile 'com.jfoenix:jfoenix:9.0.10'
+    compile group: 'org.controlsfx', name: 'controlsfx', version: '11.0.3'
+
     //implementation 'org.appdapter:ext.bundle.math.symja_jas:1.2.3'
     //compile 'de.uni-mannheim.rz.krum:jas:2.6.6017'      //TODO: Which CAS system?
+}
+
+application {
+    // Define the main class for the application.
+    mainClassName = 'Uckit.view.UCKIT'
+}
+
+test {
+    // Use junit platform for unit tests
+    useJUnitPlatform()
 }
